--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,25 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+:root{
+    --font-principal: 14px;
+    --color-header:#79717A;
+    --font-family: "Roboto", sans-serif;
+    --font-optical-sizing: auto;
+    --font-weight: weight;
+    --font-style: normal;
+    --font-variation-settings:
+      "wdth" 100;
+    
+}
+
+
+*{
+  margin: 0;
+  padding: 0;
+}
+body{
+    font-size: var();
+    font-family:Arial, Helvetica, sans-serif;
+    font-family: var(family);
+    font-style: var(--font-style);
+    font-size: 18px;
+}
