--- a/src/app/features/pages/home/header/header.component.html
+++ b/src/app/features/pages/home/header/header.component.html
@@ -1,5 +1,7 @@
 <header class="ng-header">
-    
+    <section class="ng-logo">
+        
+     </section>
         <!-- @for (item of menuIten; track $index) {
             <section class="menu-opt">
                 <a [routerLink]="item.rotas"  class="app-menu">{{item.name}}</a>
@@ -10,6 +12,9 @@
             </section>
         } -->
     <section class="ng-perfil">
+        <mat-icon>
+            light_mode
+        </mat-icon>
         <small class="ng-perfil-name">Olá Elivandro</small>
          <mat-icon>
             person
