--- a/src/app/features/pages/home/home.component.html
+++ b/src/app/features/pages/home/home.component.html
@@ -1,11 +1,12 @@
+<app-header></app-header>
  <main class="ng-container">
     <aside>
         <app-menu-dropdown></app-menu-dropdown>
     </aside>
     <section class="ng-main">
-        <app-header></app-header>
         <div class="area-main">
             <router-outlet></router-outlet>
         </div>
     </section>
  </main>
+ <app-footer></app-footer>
