--- a/src/app/features/pages/home/menuDropDown/menudrop.component.html
+++ b/src/app/features/pages/home/menuDropDown/menudrop.component.html
@@ -1,7 +1,7 @@
 <div class="area-menu">
-    <section class="ng-logo">
+    <!-- <section class="ng-logo">
        <img src="/logo.png" alt="" width="150px" height="130px">
-    </section>
+    </section> -->
     <div class="btn">
         <mat-icon (click)="btn()" class="icon">arrow_back_ios</mat-icon>
     </div>
