--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,6 +15,7 @@
 *{
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 body{
     font-size: var();
@@ -22,4 +23,4 @@ body{
     font-family: var(family);
     font-style: var(--font-style);
     font-size: 18px;
-}
+  }
