correcao de menu

--- a/src/app/features/pages/home/header/header.component.html
+++ b/src/app/features/pages/home/header/header.component.html
@@ -12,7 +12,7 @@
             </section>
         } -->
     <section class="ng-perfil">
-        <mat-icon>
+        <mat-icon (click)="light()">
             light_mode
         </mat-icon>
         <small class="ng-perfil-name">Olá Elivandro</small>
