--- a/src/app/features/pages/home/foother/footer.component.scss
+++ b/src/app/features/pages/home/foother/footer.component.scss
@@ -3,10 +3,11 @@
     align-items: center;
     justify-content: center;
     padding: 5px 0;
+    bottom: 0;
+    width: 100%;
     .ng-footer-small{
         font-size: 12px;
         color: var(--color-header);
         text-align: center;
     }
-
 }
