--- a/src/app/features/pages/home/header/header.component.scss
+++ b/src/app/features/pages/home/header/header.component.scss
@@ -4,7 +4,8 @@
     justify-content:space-between;
     padding: 10px 10px;
     align-items: center;
-    height: 40pxpx;
+    // box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
     .ng-logo{
             width:140px;
             height: 40px;
@@ -13,9 +14,7 @@
             padding: 20px 5px;
             background-repeat: no-repeat;
             margin-left: 20px;
-        
     }
-
     .ng-perfil{
         display: flex;
         align-items: center;
