--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,26 +1,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
-:root{
-    --font-principal: 14px;
-    --color-header:#79717A;
-    --font-family: "Roboto", sans-serif;
-    --font-optical-sizing: auto;
-    --font-weight: weight;
-    --font-style: normal;
-    --font-variation-settings:
-      "wdth" 100;
-    
+
+:root {
+  --font-principal: 14px;
+  --color-header: #79717A;
+  --font-family: "Roboto", sans-serif;
+  --font-optical-sizing: auto;
+  --font-weight: weight;
+  --font-style: normal;
+  --font-variation-settings:
+    "wdth" 100;
+
 }
 
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  overflow: auto;
+  scrollbar-width: thin;
+  scrollbar-color: #505861 #f2f2f2;
 }
-body{
-    font-size: var();
-    font-family:Arial, Helvetica, sans-serif;
-    font-family: var(family);
-    font-style: var(--font-style);
-    font-size: 18px;
-  }
+
+body {
+  font-size: var();
+  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(family);
+  font-style: var(--font-style);
+  font-size: 18px;
+}
