--- a/src/app/features/pages/home/menuDropDown/menudrop.component.html
+++ b/src/app/features/pages/home/menuDropDown/menudrop.component.html
@@ -2,9 +2,9 @@
     <!-- <section class="ng-logo">
        <img src="/logo.png" alt="" width="150px" height="130px">
     </section> -->
-    <div class="btn">
-        <mat-icon (click)="btn()" class="icon">arrow_back_ios</mat-icon>
-    </div>
+    <!-- <div class="btn">
+        <mat-icon  class="icon">arrow_back_ios</mat-icon>
+    </div> -->
     <section class=" menu">
         <nav class="menu-area">
             <ul>
