--- a/src/app/features/pages/home/home.component.scss
+++ b/src/app/features/pages/home/home.component.scss
@@ -1,17 +1,18 @@
 .ng-container{
     display: flex;
-    height: 100vh;
+    height: calc(100vh - 82px);
     aside{
        overflow: hidden;
 
     }
-    
     .ng-main{
         flex: 1;
         .area-main{
             background-color: #f2f2f2;
             height: 100vh;
-            padding: 5px;
+            overflow: auto;
+            scrollbar-width: thin;
+            scrollbar-color: #505861 #f2f2f2;
 
         }
     }
