--- a/src/app/features/pages/home/menuDropDown/menudrop.component.scss
+++ b/src/app/features/pages/home/menuDropDown/menudrop.component.scss
@@ -1,6 +1,7 @@
    .area-menu {
        height: 100vh;
        overflow: hidden;
+       padding-bottom: 200px;
       
        .btn {
            display: flex;
@@ -15,16 +16,14 @@
        }
 
        .menu-area {
-        //    overflow: auto;
-        //    scrollbar-width: thin;
-        //    scrollbar-color: #505861 #f2f2f2;
+        padding-top: 20px;
+           overflow: auto;
+           scrollbar-width: thin;
+           scrollbar-color: #505861 #f2f2f2;
            color: #79717A;
-           height: 100vh;
-           padding-bottom: 10px 0;
-           padding: 10px 0;
-
+           height: 82vh;
            .active-page {
-               background-color: #99c8ee;
+               background-color: #bddefa;
 
            }
 
@@ -35,20 +34,13 @@
            ul {
                display: flex;
                flex-direction: column;
-
-
-
                li {
-
-
                    padding: 6px 1em;
                    display: flex;
                    align-items: center;
                    line-height: 1.5em;
                    cursor: pointer;
-                   margin-right: 5px;
                    color: #000;
-
                    .icon {
                        height: 100%;
                        text-align: center;
@@ -56,9 +48,7 @@
                        font-size: 20px;
                        padding: 0.1em 0;
                        margin: 0;
-
                    }
-
                    .icone-name {
                        display: flex;
                        align-items: center;
@@ -76,7 +66,7 @@
 
 
                li:hover {
-                   background-color: rgba(255, 255, 255, 0.2);
+                background-color: #bddefa;
 
                }
 
