--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,9 +17,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  overflow: auto;
-  scrollbar-width: thin;
-  scrollbar-color: #505861 #f2f2f2;
+  overflow: hidden;
 }
 
 body {
@@ -28,4 +26,5 @@ body {
   font-family: var(family);
   font-style: var(--font-style);
   font-size: 18px;
+  overflow: hidden;
 }
