--- a/src/app/features/pages/home/home.component.scss
+++ b/src/app/features/pages/home/home.component.scss
@@ -13,6 +13,7 @@
             overflow: auto;
             scrollbar-width: thin;
             scrollbar-color: #505861 #f2f2f2;
+            padding: 6px 10px;
 
         }
     }
