--- a/src/app/features/pages/destaque/destaque.component.html
+++ b/src/app/features/pages/destaque/destaque.component.html
@@ -1,4 +1,8 @@
 <app-modal>
+  <app-carrossel></app-carrossel>
+
+</app-modal>
+<app-modal>
     <div class="titulo">
         <span>Mais procurados</span>
     </div>
@@ -24,7 +28,7 @@
 </app-modal>
 
    
-<app-modal>
+<!-- <app-modal>
     <div class="titulo">
         <span>Empresa</span>
     </div>
@@ -42,7 +46,7 @@
         <app-utius [imagem]="imagem"></app-utius>
     
       </div>
-</app-modal>
+</app-modal> -->
 
 
   
