--- a/src/app/shared/component/carrossel/carrossel.component.html
+++ b/src/app/shared/component/carrossel/carrossel.component.html
@@ -1,5 +1,5 @@
 <section>
-    <figure class="figure">
+    <div class="figure">
         <div class="slide_area">
             <input type="radio" #radio1 name="radio1" id="radio1" checked>
             <input type="radio" #radio2 name="radio1" id="radio2">
@@ -34,5 +34,5 @@
             <label for="radio2" class="radio_name1"></label>
             <label for="radio3" class="radio_name1"></label>
         </div>
-    </figure>
+    </div>
 </section>
