--- a/src/app/features/pages/home/header/header.component.html
+++ b/src/app/features/pages/home/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="ng-header" [ngClass]="categoria">
     <section class="ng-logo">
         @if (usuario) {
-            <mat-icon (click)="exibir()"  class="icon">☰</mat-icon>
+            <mat-icon (click)="exibir()"  class="icon">menu</mat-icon>
         }
     </section>
     <section class="ng-form" >
