--- a/src/app/features/pages/home/menuDropDown/menudrop.component.scss
+++ b/src/app/features/pages/home/menuDropDown/menudrop.component.scss
@@ -2,6 +2,7 @@
        height: 100vh;
        overflow: hidden;
        padding-bottom: 200px;
+       box-shadow: 0,8px,0,2.3;
 
       
        .btn {
