--- a/src/app/shared/component/utius/utius.component.scss
+++ b/src/app/shared/component/utius/utius.component.scss
@@ -5,6 +5,7 @@
     width:200px;
     height:270px;
     border-radius: 3px;
+    cursor: pointer;
     figure img{
         width: 200px;
         height: 150px;
