--- a/src/app/shared/component/carrossel/carrossel.component.scss
+++ b/src/app/shared/component/carrossel/carrossel.component.scss
@@ -14,7 +14,7 @@
         .slide {
             width: 25%;
             height: 250px;
-            transition: all 2s ease-in;
+            transition: all 1s ease-in;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -153,7 +153,7 @@
 }
 @media screen and (max-width:900px) {
     .figure {
-        display: none;
+        // display: none;
 
     }
 
