--- a/src/app/shared/component/search/search.component.scss
+++ b/src/app/shared/component/search/search.component.scss
@@ -1,7 +1,59 @@
 .app-search {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    height: 40px;
-    padding: 10px 20px;
+    height: 100%;
+    gap: 20px;
+    .fieldset{
+        padding: 3px 3px;
+        margin: 0;
+        border-radius: 5px;
+        background-color: #ffff;
+        legend{
+            font-size: 10px;
+            padding: 0 2px;
+            margin-top: 2px;
+            margin: 0;
+            color:var(--color-header);
+        }
+        .ng-form{
+            border: 0;
+            padding:5px 10px;
+            outline: none;
+        }
+    }
+    .ng-select{
+        padding:9px 20px;
+        margin-top: 3px;
+        border-radius: 5px;
+        outline: none;
+        background-color: #ffff;
+        border: 1px solid var(--color-header);
+    }
+    .ng-busca {
+        background-color: #ffff;
+        margin-top: 3px;
+        border: 0;
+        padding:10px 20px;
+        border-radius: 5px;
+        border: 1px solid var(--color-header);
+    }
+
+    .ng-pedidos{
+        margin-top: 3px;
+        padding: 9px 20px;
+        border-radius: 5px;
+        border: 0;
+        background-color: green;
+        color: #ffff;
+        transition: 0.5 ease-in;
+        cursor: pointer;
+    }
+    .ng-pedidos:hover{
+        background-color: rgb(58, 165, 58);
+       
+    }
+    .ng-pedidos:active {
+        background-color: rgb(3, 53, 3);
+        transform: scale(0.97);
+      }
 }
