First commit tela de login

--- a/src/app/features/pages/home/header/header.component.html
+++ b/src/app/features/pages/home/header/header.component.html
@@ -31,7 +31,7 @@
         <mat-icon (click)="light()">
             shopping_cart
         </mat-icon>
-        <button ngClass="btn1">
+        <button ngClass="btn1" (click)="pageSignin()">
             Login
         </button>
         <button ngClass="btn2" (click)="pageSignup()">
