--- a/src/app/features/pages/auth/signin/signin.component.html
+++ b/src/app/features/pages/auth/signin/signin.component.html
@@ -11,7 +11,7 @@
         </fieldset>
         <fieldset class="ng-fieldset">
             <legend>Senha</legend>
-            <input type="password" class="ng-input" placeholder="Senha..." formControlName="senha" >
+            <input type="password" class="ng-input" placeholder="Senha..." formControlName="password" >
         </fieldset>
         <button class="ng-btn" (click)="btn()">Login</button>
         <span class="ng-text">Esqueceu sua senha?</span>
