--- a/src/app/features/pages/auth/signin/signin.component.scss
+++ b/src/app/features/pages/auth/signin/signin.component.scss
@@ -10,7 +10,12 @@
 
     .ng-logo {
         width: 150px;
-        height: 40px;
+        height: 55px;
+        padding: 5px;
+        background-image: url('/logo.png');
+        background-size: cover;
+        background-repeat: no-repeat;
+        cursor: pointer;
     }
     
     .ng-form {
@@ -21,25 +26,27 @@
         padding: 0 50px;
         height: 400px;
         background: linear-gradient(to bottom, #432059, #000000);
-        gap: 20px;
+        margin-bottom: 20px;
         border-radius: 30px;
         box-shadow: 0 1px 15px 10px rgba(0, 0, 0, 0.17);
 
         .ng-title {
             text-align: center;
             color: #ddd;
+            margin-bottom: 20px;
 
         }
         
         .ng-title span {
             font-size: 15px;
+            margin-bottom: 20px;
         }
 
         .ng-fieldset {
             width: 350px;
             padding: 7px;
-            border: 1px solid #888;
             border-radius: 5px;
+            margin-top: 20px;
             
             
             legend {
@@ -54,12 +61,19 @@
                 border: 0;
                 width: 100%;
                 height: 20px;
-                font-size: 15px;
+                font-size: 12px;
                 color: #eee;
             }
 
 
 
+        }
+
+        .ng-error {
+            width: 100%;
+            font-size: 12px;
+            color: #FF8401;
+            padding: 2px 5px;
         }
 
         
@@ -74,6 +88,8 @@
             font-weight: 500;
             background-color: #eee;
             color: #592d74;
+            margin-top: 20px;
+
         }
         .ng-btn:hover {
             background-color: #c8c8c8;
@@ -84,14 +100,20 @@
 
         .ng-text {
             color: #bbb;
-            font-size: 13px;
+            font-size: 12px;
             text-decoration: underline;
+            margin-top: 20px;
         }
 
         .ng-btn-signup {
             height: 25px;
             border-radius: 10px;
             background-color: #bbb;
+            margin-top: 20px;
         }
     }
+}
+
+.mudaCor {
+    border: 1px solid #FFE5C9;
 }
