Tela de cadastro Slide

--- a/src/app/features/pages/auth/signup/signup.component.html
+++ b/src/app/features/pages/auth/signup/signup.component.html
@@ -1,1 +1,7 @@
-<div>Cadastro de usuario</div>
+<div class="ng-main">
+    <div class="ng-logo" (click)="pageCategorias()"></div>
+    <app-formModal>
+        <app-form-signup></app-form-signup>
+    </app-formModal>
+    <app-footer></app-footer>
+</div>
