--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,7 @@
   --font-style: normal;
   --font-variation-settings:
     "wdth" 100;
+  --background-color-container: linear-gradient(to bottom, #432059, #000000);
 
 }
 
